<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arcus Dictionary</string>

    <string name="init_text">Arcus Dictionary Pro is initialising.\n\nVerifying data and upgrading file if required.\n\nThis usually takes around 10 seconds for an upgrade or about 2 to 3 seconds otherwise.</string>
    <string name="init_caption">Initialising…</string>
    <string name="no_sd_card_title">Dictionary is not available</string>
    <string name="no_sd_card_message">The dictionary is not available when you have your Android phone mounted as an external disk.  Please start the application again when you have unmounted the external disk.</string>
    <string name="no_sd_card_button_message">Click to exit</string>
    <string name="no_results">No results for: </string>
    <string name="exit_message">Press back once more to exit</string>

    <!-- Prefs -->
    <string name="pref.alpha_sort_title">Alphabetical sorting</string>
    <string name="pref.alpha_sort_summary">Sort alphabetically rather than by frequency analysis</string>

    <string name="pref.autocorrect_title">Enable auto-correct</string>
    <string name="pref.autocorrect_summary">Enable Android&quot;s auto-complete &amp; auto-correct in the search box</string>

    <string name="pref.lang_title">Language selection</string>
    <string name="pref.lang_summary">Use US english instead of UK english for text-to-speech</string>

    <string name="pref.web_title">Disable Internet usage</string>
    <string name="pref.web_summary">Disable Internet use. This will disable web dictionaries and voice recognition.</string>

    <string name="pref.adult_key">adult</string>
    <string name="pref.adult_title">Adult Content Filter</string>
    <string name="pref.adult_summary">Prevents adult words from appearing in random word widget</string>


    <!-- MENUS -->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_random">Random Words</string>

    <string name="menu_sort_alpha_asc">Sort by Word (Asc.)</string>
    <string name="menu_sort_alpha_desc">Sort by Word (Desc.)</string>

    <string name="menu_sort_date_asc">Sort by Date (Asc.)</string>
    <string name="menu_sort_date_desc">Sort by Date (Desc.)</string>

    <string name="menu_clear_favourites">Clear Favourites</string>
    <string name="menu_email_favourites">Email Favourites</string>

    <!-- Dialogue -->
    <string name="dialogue_yes">Yes</string>
    <string name="dialogue_no">No</string>
    <string name="dialogue_ok">OK</string>
    <string name="dialogue_cancel">Cancel</string>

    <string name="favourites_dialogue_text">Delete all favourites?</string>

    <!-- HELP -->
    <string name="help_text">Type to search, results will appear in real-time.\nClick a star to save a word to or remove from favourites.\nClick the menu button to view favourites and change word sorting from smart ordering (frequency analysis) to pure alphabetical ordering.</string>

    <!-- ABOUT -->

    <!-- SPECIAL MODES -->
    <string name="favourites_mode">special:favourites</string>
    <string name="random_mode">special:random</string>

    <!-- Toast, i love toast -->
    <string name="favourites_toast_added"> added to favourites</string>
    <string name="favourites_toast_removed"> removed from favourites</string>

    <!-- ABOUT APPLICATION -->

    <!-- Widget -->
    <string name="wotd_default_title">WOTD Widget</string>
    <string name="word_default_description">Please run Arcus Dictionary Pro first before using this widget.</string>

    <!-- Web lookup -->
    <string name="web_lookup_header">Web Dictionary Lookup</string>
    <string name="web_lookup_google">Google Dictionary</string>
    <string name="web_lookup_wikitionary">Wikitionary</string>
    <string name="web_lookup_warning_header">Use network resources?</string>
    <string name="web_lookup_warning_message">Reminder: Searching web dictionaries and using voice recognition may cost you money (i.e. when not on wifi). You can disable internet use in menu > settings. This warning will only be shown once.</string>

    <!-- Speech -->
    <string name="voice_recognition_blurb">Voice recognition</string>
    <string name="voice_recognition_no_results">Sorry, no voice recognition results</string>
    <string name="tts_install_header">Install voice data</string>
    <string name="tts_install_message">In order to listen to pronunciation you must install Google\'s voice data, proceed?</string>
    <string name="tts_loading_message">Loading speech. May take a few seconds</string>
    <string name="click_to_link">Click to link</string>
    <string name="click_to_share">Click to share</string>
    <string name="click_to_hear_definition">Click to hear definition</string>
    <string name="click_to_add_to_favourites">Click to add to favourites</string>
    <string name="type_here_to_search">Type here to search…</string>
    <string name="press_to_activate_voice_input">Press to activate voice input</string>

</resources>
