<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/IconBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/definition_tv_type"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.4"
            android:paddingStart="8dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ShareIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@string/click_to_share"
                android:focusable="true"
                android:src="@drawable/ic_share"
                app:tint="?attr/colorOnPrimary" />

            <ImageView
                android:id="@+id/TtsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@string/click_to_hear_definition"
                android:focusable="true"
                android:src="@drawable/ic_play_arrow"
                app:tint="?attr/colorOnPrimary" />

            <ImageView
                android:id="@+id/FavIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@string/click_to_add_to_favourites"
                android:focusable="true"
                android:src="@drawable/ic_star_border"
                app:tint="?attr/colorOnPrimary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/defsCntr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/definition_tv_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="true"
            android:textColor="?attr/colorOnSurface"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/definition_tv_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/definition_tv_synonyms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>
